--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 </div>
-  <div class="container-fluid">
+  <div class="container-fluid ng-cloak">
     <ng-view></ng-view>
   </div>
 
