--- a/web/sign.html
+++ b/web/sign.html
@@ -1,7 +1,7 @@
 <div class="sign {{sign.color}}">
 	<div class="inner">
 		<line ng-model="line" ng-repeat="line in sign.lines"></line>
-		<p class="big" ng-if="!sign.lines || sign.lines.length === 0">
+		<p class="MD" ng-if="!sign.lines || sign.lines.length === 0">
 			Sad sign has no lines :-(
 		</p>
 	</div>
