--- a/web/index.html
+++ b/web/index.html
@@ -11,50 +11,33 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-sanitize.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
- 
 </head>
 
 <body ng-controller="Main">
-<div class="container">
-  <div class="row">
-    <div class="col-md-9">
-    
-    </div>
-    <div class="col-md-3">
-      <br/>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        
+      </div>
+      <div class="col-md-3">
+        <br/>
+      </div>
     </div>
   </div>
-</div>
   <div class="container-fluid ng-cloak">
     <ng-view></ng-view>
   </div>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="app.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <!-- <div class="sign blue">
-      <div class="inner">
-      <p class="big">
-      SHITTER
-      <i class="fa fa-arrow-down"></i>
-      </p>
+      ga('create', 'UA-248590-9', 'alacode.com');
+      ga('send', 'pageview');
 
-      </div>
-    </div>
-
-    <div class="sign brown">
-      <div class="inner">
-      <p class="big">
-      BEARS
-      </p>
-      <p>play dead!</p>
-      <p>
-      <i class="fa fa-arrow-down"></i>
-      <i class="fa fa-arrow-down"></i>
-
-      </p>
-      </div>
-    </div> -->
-
-      <script src="bower_components/underscore/underscore.js"></script>
-      <script src="app.js"></script>
+    </script>
   </body>
-
-</html>
+  </html>
