--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,10 @@
 <html ng-app="app">
 
 <head>
+  <meta charset="utf-8">
+  <title>ng-signs</title>
+  <meta name="description" content="An AngularJS road sign generator">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -17,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        
+
       </div>
       <div class="col-md-3">
         <br/>
@@ -26,6 +30,9 @@
   </div>
   <div class="container-fluid ng-cloak">
     <ng-view></ng-view>
+    <div class="footer">
+      Created by <a href="https://twitter.com/adamczak" target="_blank">@adamczak</a>
+    </div>
   </div>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="app.js"></script>
