--- a/web/output.html
+++ b/web/output.html
@@ -1,8 +1,12 @@
 <style type="text/css">
-    body {
+    html,body {
       background-color: transparent;
       background-image: none;
       padding: 0px;
+    }
+
+    #footer {
+      display: none;
     }
 
     #output {
