--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
     <ng-view></ng-view>
   </div>
    <div id="footer">
-      Created by <a href="https://twitter.com/adamczak" target="_blank">@adamczak</a> for no particularly good reason. 
+      Created by <a href="https://twitter.com/adamczak" target="_blank">@adamczak</a> for no particularly good reason. &#160;&#160;&#160; <a href="https://github.com/adamczak/ng-signs" target="_blank"><img src="img/github.png" style="height:20px;"/></a>
     </div>
 </div>
     <script src="bower_components/underscore/underscore.js"></script>
